--- a/hls4ml/lab1/keras-config.yml
+++ b/hls4ml/lab1/keras-config.yml
@@ -1,5 +1,5 @@
-KerasJson: hls4ml/example-models/keras/KERAS_1layer.json
-KerasH5:   hls4ml/example-models/keras/KERAS_1layer_weights.h5
+KerasJson: KERAS_1layer.json
+KerasH5:   KERAS_1layer_weights.h5
 InputData: KERAS_1layer_input_features.dat
 OutputPredictions: KERAS_1layer_predictions.dat
 TruthLabels: KERAS_1layer_truth_labels.dat
