--- a/environment.yml
+++ b/environment.yml
@@ -7,5 +7,7 @@ dependencies:
   - pip:
     - jupyter
     - tensorflow==2.1.0
+    - pydot
+    - graphviz
     - git+git://github.com/hls-fpga-machine-learning/hls4ml.git#egg=hls4ml[profiling]
     - git+git://github.com/google/qkeras.git#egg=qkeras
